fix: move media clip description above video and add spacing from profile info

--- a/src/app/components/event-types/video-event.component.scss
+++ b/src/app/components/event-types/video-event.component.scss
@@ -17,9 +17,8 @@
 }
 
 .media-title {
-  margin: 0 0 12px 0;
+  margin: 12px 0 0 0;
   font-size: 1.2rem;
-  font-weight: 600;
   color: var(--mat-sys-on-surface);
 }
 
@@ -447,7 +446,7 @@
 }
 
 .video-description {
-  margin: 12px 0 0 0;
+  margin: 4px 0 0 0;
   line-height: 1.5;
 }
 
